Added web client

--- a/sdpopsservice/sdpopsservice/SDPOpsServiceConsoleHost/App.config
+++ b/sdpopsservice/sdpopsservice/SDPOpsServiceConsoleHost/App.config
@@ -6,7 +6,7 @@
   <system.serviceModel>
     <services>
       <service name="sdpopsservice.SDPOPSService" behaviorConfiguration="mexBehavior" >
-        <endpoint address="HelloService" binding="basicHttpBinding" contract="sdpopsservice.ISDPOPSService"></endpoint>
+        <endpoint address="SDPOpsService" binding="basicHttpBinding" contract="sdpopsservice.ISDPOPSService"></endpoint>
         <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"></endpoint>
         <host>
           <baseAddresses>
